Changelog
=========

5.6-dev - (unreleased)
----------------------
* WIP :: Change: merged values from relatedProducts fiels to relatedItems
  field for EEAFigure and Data objects.
  [ghicaale refs #2790]
* Bug fix: change rdfmarshaller modifiers to conform to API changes
  [tiberich #3981]

5.5 - (2012-10-04)
------------------
* Change: modify code to conform to api change in eea.rdfhmarshaller
  [tiberich #5545]

5.4 - (2012-09-27)
------------------
* Bug fix: Fixed error: Couldn't import eea.daviz.content.visualization,
  No module named visualization (eea.daviz 6.0 not-released yet)
  [voineali]
* Bug fix: fixed some layers not showing up. removed fixed extent.
  for gis applications template, now zoom defined on arcgis.com is applied.
  [demarant refs #5546]

5.3 - (2012-09-27)
------------------
* Feature: added rich text field to CloudVideo to bring it up to par with the
  file based video content
  [ichimdav #5480]
* Change: Update references to eea.daviz content
  [voineali refs #5420]
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]
* Bug fix: removed unused protect_email transform
  [ghicaale refs #4926]

5.2 - (2012-08-28)
------------------
* Upgrade step: Manual step ask ichimdav to do it
  - Set images on CloudVideos to the renamed image field
  [ichimdav #5480]
* Upgrade step: under www/portal_types/CloudVideo/manage_aliases:
   - Set "base_edit" to edit method instead of atct_edit
* Upgrade step: under www/portal_properties/site_properties:
   - Set "CloudVideo" to typesUseViewActionInListings property
* Bug fix: display view page for CloudVideo when viewing without /view
  [ichimdav #5480]
* Change: implemented default template for external promotions. Now google
  search results will have proper templates with active links.
  [demarant]
* Upgrade step: replace base_view with promotion_view in portal_types
  for type Promotion. Already done on production.
  [demarant]